--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@hono/zod-validator": "^0.2.2",
+    "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "hono": "^4.4.0",
+    "jsonwebtoken": "9.0.2",
     "ora": "^8.0.1",
     "postgres": "3.4.4",
+    "uuid": "9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/uuid": "^9.0.8",
     "kanel": "^3.8.9"
   }
 }
