chore: Update npm dependencies and add @biomejs/biome 1.8.1 to devDependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.1",
     "@types/bun": "latest",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/uuid": "^9.0.8",
