chore: Update user_name field in database schema and migration files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "src/index.ts",
             "cwd": "${workspaceFolder}",
             "stopOnEntry": false,
-            "watchMode": false
+            "watchMode": true
         },
         {
             "type": "bun",
@@ -22,7 +22,7 @@
             "program": "${file}",
             "cwd": "${workspaceFolder}",
             "noDebug": true,
-            "watchMode": false
+            "watchMode": true
         },
         {
             "type": "bun",
