--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@hono/zod-validator": "^0.2.2",
+    "@upstash/redis": "1.31.6",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "hono": "^4.4.0",
