--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@hono/zod-validator": "^0.2.2",
-    "@upstash/redis": "1.31.6",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
     "hono": "^4.4.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "9.0.2",
     "ora": "^8.0.1",
     "postgres": "3.4.4",
