--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/socket.io": "^3.0.2",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
+    "cloudinary": "^2.2.0",
     "hono": "^4.4.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "9.0.2",
