--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@hono/zod-validator": "^0.2.2",
+    "@types/cli-table": "^0.3.4",
     "@types/socket.io": "^3.0.2",
     "axios": "^1.7.2",
     "chalk": "^5.3.0",
+    "cli-table": "^0.3.11",
     "cloudinary": "^2.2.0",
     "hono": "^4.4.0",
     "ioredis": "^5.4.1",
@@ -19,6 +21,7 @@
     "ora": "^8.0.1",
     "postgres": "3.4.4",
     "uuid": "9.0.1",
+    "winston": "^3.13.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
