--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "jsonwebtoken": "9.0.2",
     "ora": "^8.0.1",
     "postgres": "3.4.4",
+    "prom-client": "^15.1.3",
     "uuid": "9.0.1",
     "winston": "^3.13.0",
+    "winston-loki": "^6.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
