--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "db:migrate": "bun run db/migrations/index.ts",
     "db:seed": "bun run db/seed.ts",
     "gen:module": "bun run src/utils/genModule.ts",
-    "db:generate": "bunx kanel"
+    "db:generate": "bunx kanel",
+    "email": "bun email:dev"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@hono-rate-limiter/redis": "^0.1.4",
     "@hono/zod-validator": "^0.2.2",
     "@types/cli-table": "^0.3.4",
     "@types/socket.io": "^3.0.2",
@@ -21,6 +23,8 @@
     "ora": "^8.0.1",
     "postgres": "3.4.4",
     "prom-client": "^15.1.3",
+    "rate-limiter-flexible": "^5.0.3",
+    "resend": "^3.4.0",
     "uuid": "9.0.1",
     "winston": "^3.13.0",
     "winston-loki": "^6.1.2",
